# computer-use-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.bat  test_bring_front.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-notes/: v0.2.0.md
.github/workflows/: ci.yml  codeql.yml  release.yml
computer_use_agent/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  executor.py  guardrails.py  i18n.py  llm.py  logger.py  mcp_server.py  notify.py  plugins.py  prompts.py  replay.py  sanitization.py  screen.py  token_budget.py  tui.py  uia_tree.py  visual_effects.py  webhook.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  PLUGINS.md
tests/: test_all.py  test_api.py  test_cli.py  test_cli_new.py  test_comprehensive.py  test_coverage.py  test_logger_cli.py  test_new_commands.py  test_notify.py  test_som.py  test_uitars.py  test_uitars_mode.py  test_visual.py  test_visual_diag.py
